# onboarding-copilot

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  demo.ps1  demo.sh  gpt-conversation--cursor-prompt-planning.md  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.cursor/: mcp.json  scratchpad.md
.cursor/rules/: agent-identity.mdc  bead-completion.mdc  beads-quality.mdc  design-docs.mdc  multi-agent-review.mdc  onboarding-copilot.mdc  operating-model.mdc  parallel-subagent-safety.mdc  pragmatic-tdd.mdc  scikit-image-conventions.mdc  sdlc-implementation.mdc  sdlc-planning.mdc  sdlc-review.mdc  sdlc-testing.mdc  session-lifecycle.mdc  worktree-awareness.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture-slides.html  cursor-rule-verification.md  decisions.md  deck.md  demo.md  deployment-guide.md  gists.md  known-limitations.md  library-battle-cards.md
examples/bad-first-contrib/: PLAN.md
examples/bad-first-contrib/filters/: _local_contrast.py
examples/safe-first-contrib/: BRIEFS.md  PLAN.md
examples/safe-first-contrib/filters/: _adaptive_equalize.py
examples/safe-first-contrib/filters/tests/: test_adaptive_equalize.py
profiles/: diffusers.yaml  scikit-image.yaml
scripts/: render_rules.py  setup-scikit-image-demo.sh
src/ob/: __init__.py  cli.py  guardrails.py  mcp_server.py  models.py  profile.py  render_rules.py
src/ob/commands/: brief.py  check.py  scaffold.py
tests/: conftest.py  test_brief.py  test_check.py  test_cli.py  test_mcp_server.py  test_profile.py  test_render_rules.py  test_scaffold.py
