[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engineering-onboarding-copilot"
version = "0.1.0"
description = "Convention-aware SDLC workflow for onboarding engineers to open-source libraries"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "mypy>=1.8",
    "engineering-onboarding-copilot[mcp]",
]

[project.scripts]
ob = "ob.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ob"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
extend-exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["ob"]

[tool.mypy]
python_version = "3.12"
files = ["src/ob"]
# Pragmatic, not --strict: enforce typed function signatures in our own code and
# flag dead/redundant type noise, while tolerating untyped third-party imports
# (typer/fastmcp/rich don't all ship stubs).
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true
